fix: Updated LLM example and tempaltes to include sources + Hide buttons while loading

--- a/AgrIA_UI/src/app/components/parcel-finder/parcel-display/parcel-display.component.html
+++ b/AgrIA_UI/src/app/components/parcel-finder/parcel-display/parcel-display.component.html
@@ -15,7 +15,7 @@
             }
         </div>
         <div class="display-buttons">
-            @if(parcelImageUrl){
+            @if(parcelImageUrl && isLoading() != true){
                 <div class="parcel-actions-wrapper">
                     <label class="detailed-description-checkbox">
                         <input 
