Fix: Orevent user to send multiple chat inputs while LLM replies are loading + Minor fix

--- a/AgrIA_UI/src/app/components/chat/chat.component.html
+++ b/AgrIA_UI/src/app/components/chat/chat.component.html
@@ -42,7 +42,7 @@
             <textarea 
                 id="user-input" 
                 (keydown.enter)="sendUserInput()"
-                (keyup.enter)="clearUserInput()"
+                (keyup.enter)="this.userInput = this.userInput.trim()"
                 placeholder="{{ 'chat.chatInput.placeholder' | translate }}" 
                 [(ngModel)]="userInput"
             >
