--- a/AgrIA_UI/src/app/components/chat/chat-assistant/chat-assistant.component.css
+++ b/AgrIA_UI/src/app/components/chat/chat-assistant/chat-assistant.component.css
@@ -4,8 +4,8 @@
     gap: 1.5rem;
     max-height: 635px;
     overflow-y: auto;
-    padding: 1rem;
-    background-color: #f0f0f0;
+    padding: 0.2rem;
+    /* background-color: #f0f0f0; */
     border-radius: 8px;
     scroll-behavior: smooth;
   }
