--- a/AgrIA_UI/src/app/components/parcel-finder/parcel-drawer/parcel-drawer.component.css
+++ b/AgrIA_UI/src/app/components/parcel-finder/parcel-drawer/parcel-drawer.component.css
@@ -69,6 +69,7 @@
 }
 
 .coordinates-container {
+  color: var(--color-text-inverted-light);
   display: flex;
   flex-direction: column;
   align-items: center;
