--- a/AgrIA_UI/src/app/components/parcel-finder/parcel-finder.component.css
+++ b/AgrIA_UI/src/app/components/parcel-finder/parcel-finder.component.css
@@ -29,6 +29,7 @@
   padding: 0.4rem 1rem;
   font-size: 1rem;
   font-weight: bold;
+  color: var(--color-text-inverted-light);
   background-color: var(--color-surface-background);
   border: 1px solid var(--color-brand-secondary);
   border-radius: var(--radius-default);
