--- a/AgrIA_UI/src/app/components/navbar/navbar.component.html
+++ b/AgrIA_UI/src/app/components/navbar/navbar.component.html
@@ -41,9 +41,9 @@
                     title="{{ isDarkMode() ? ('nav.theme.light' | translate) : ('nav.theme.dark' | translate) }}"
                 >
                     @if (this.isDarkMode()) {
-                        <span>☀️</span> 
+                        <span>&#x26AA;</span> 
                     } @else{ 
-                        <span>🌙</span>
+                        <span>&#x26AB;</span>
                     }
                 </button>
             </li>
