--- a/AgrIA_UI/src/app/components/chat/chat.component.css
+++ b/AgrIA_UI/src/app/components/chat/chat.component.css
@@ -52,7 +52,6 @@ body, html {
 }
 
 .image-header, .chat-header {
-  /* background-color: var(--color-surface-header); */
   padding: 0.75rem var(--spacing-large);
   border-bottom: 2px solid var(--color-border-dark);
   text-align: center;
@@ -222,7 +221,7 @@ app-chat-assistant {
 
 .input-button:first-of-type { /* 'Send' button */
   background-color: var(--color-action-success);
-  color: white;
+  color: #fff;
 }
 
 .input-button:first-of-type:hover {
@@ -231,7 +230,7 @@ app-chat-assistant {
 
 .input-button:nth-of-type(2) { /* 'Get suggestion' button */
   background-color: var(--color-action-warning); /* Amber */
-  color: var(--color-text-primary);
+  color: #000;
 }
 
 .input-button:nth-of-type(2):hover {
