--- a/AgrIA_UI/src/app/components/parcel-finder/parcel-locator/parcel-locator.component.html
+++ b/AgrIA_UI/src/app/components/parcel-finder/parcel-locator/parcel-locator.component.html
@@ -1,4 +1,4 @@
-<div id="parcel-cadastral">
+<div id="parcel-locator">
     <div class="content">
         <div class="form-title">
             <h2>{{ 'parcel-locator.title' | translate }}</h2>
