--- a/AgrIA_UI/src/app/components/parcel-finder/parcel-finder.component.css
+++ b/AgrIA_UI/src/app/components/parcel-finder/parcel-finder.component.css
@@ -45,7 +45,7 @@
 .custom-tab.active {
   background-color: var(--color-brand-secondary);
   color: white;
-  border-color: var(--color-brand-primary);
+  border-color: var(--color-surface-navbar);
 }
 
 .tab-pane {
